force-app/main/default/objects/Activity/fields/ARF_Channel__c.field-meta.xml
<CustomField>
    <fullName>ARF_Channel__c</fullName>
    <label>AR Channel</label>
    <type>Text</type>
    <length>50</length>
</CustomField>