force-app/main/default/objects/Activity/fields/ARF_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>ARF_Task_Type__c</fullName>
    <label>AR Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
            <value><fullName>SMS</fullName><default>false</default><label>SMS</label></value>
            <value><fullName>Reminder</fullName><default>false</default><label>Reminder</label></value>
            <value><fullName>Dispute</fullName><default>false</default><label>Dispute</label></value>
            <value><fullName>Follow-Up</fullName><default>false</default><label>Follow-Up</label></value>
            <value><fullName>Chat Escalation</fullName><default>false</default><label>Chat Escalation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>