force-app/main/default/objects/Activity/fields/ARF_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>ARF_Template_Name__c</fullName>
    <label>AR Template Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>